# Classification-ML-Processing-

./: .gitignore  INSTRUCCIONES.md  README.MD  activate_env.sh  config.py  pyproject.toml  requirements.txt  run_analysis.py
Dashboard/: index.html
Dashboard/src/: App.tsx
dashboard_data/: README_DASHBOARD.md  chart_data.json  complete_metrics.json  executive_summary.json  findings.json  kpi_metrics.json  metrics.json  summary.json
data/: adult_income_sample.csv
models/adult_income_model/metadata/: .part-00000-5b1c1fca-7b5f-4abb-aac9-5cdd94cb84bb-c000.txt.crc  part-00000-5b1c1fca-7b5f-4abb-aac9-5cdd94cb84bb-c000.txt
models/adult_income_model/stages/0_StringIndexer_34b36f3133a0/metadata/: .part-00000-641c0c7a-085b-4dbe-ac6f-4c1e3328356a-c000.txt.crc  part-00000-641c0c7a-085b-4dbe-ac6f-4c1e3328356a-c000.txt
models/adult_income_model/stages/1_StringIndexer_bf2e6091fbb4/data/: .part-00000-ede06f91-ed1f-4fea-a1f2-e70a6b6079a1-c000.snappy.parquet.crc  part-00000-ede06f91-ed1f-4fea-a1f2-e70a6b6079a1-c000.snappy.parquet
models/adult_income_model/stages/1_StringIndexer_bf2e6091fbb4/metadata/: .part-00000-a39053b8-8cbb-4ad5-a24e-6baf3078f3d9-c000.txt.crc  part-00000-a39053b8-8cbb-4ad5-a24e-6baf3078f3d9-c000.txt
models/adult_income_model/stages/2_StringIndexer_463baeba0ca5/data/: .part-00000-2a4d26c2-3703-4bff-aa90-101228494f37-c000.snappy.parquet.crc  part-00000-2a4d26c2-3703-4bff-aa90-101228494f37-c000.snappy.parquet
models/adult_income_model/stages/2_StringIndexer_463baeba0ca5/metadata/: .part-00000-4cbd2933-bdd9-4923-8d8e-4bd266e0371b-c000.txt.crc  part-00000-4cbd2933-bdd9-4923-8d8e-4bd266e0371b-c000.txt
models/adult_income_model/stages/3_OneHotEncoder_2587451474dc/data/: .part-00000-03d85367-8562-446d-a757-576e3b14841f-c000.snappy.parquet.crc  part-00000-03d85367-8562-446d-a757-576e3b14841f-c000.snappy.parquet
models/adult_income_model/stages/3_OneHotEncoder_2587451474dc/metadata/: .part-00000-7052914f-24c1-4d9d-b05b-0de102211202-c000.txt.crc  part-00000-7052914f-24c1-4d9d-b05b-0de102211202-c000.txt
models/adult_income_model/stages/4_OneHotEncoder_22414f211188/metadata/: .part-00000-b485208d-5408-4319-afc2-9152b9f8fbb4-c000.txt.crc  part-00000-b485208d-5408-4319-afc2-9152b9f8fbb4-c000.txt
models/adult_income_model/stages/5_OneHotEncoder_f0d5641c15ec/metadata/: .part-00000-7ed26405-5db9-4f62-a792-1f88dd8803f5-c000.txt.crc  part-00000-7ed26405-5db9-4f62-a792-1f88dd8803f5-c000.txt
models/adult_income_model/stages/6_VectorAssembler_66a3bcdef434/metadata/: .part-00000-90de89d5-ad71-4643-923e-08478fd147ee-c000.txt.crc  part-00000-90de89d5-ad71-4643-923e-08478fd147ee-c000.txt
src/: adult_income_classification.py  demo_predictions.py  metrics_extractor.py  notebook_analysis.ipynb  simple_demo.py
(+4 files in other folders)
